portal/src/main/webapp/theme/cw/css/screen.css
/* html element styles */
body {
    background-color: #F3F5F6
}

ul {
    list-style-type: none;
}

ul li {
    background: url(skin/arrows.png) left 6px no-repeat;
    margin: 0;
    padding-left: 11px;
}

ul a:link {
    color: #154273;
    text-decoration: none;
}

ul a:visited {
    text-decoration: none;
}

ul a:hover, ul a:visited:hover {
    color: #154273;
    text-decoration: underline;
}


/* Sking wrapper for shaded borders *****************************************************************/

.skin
{
    background: transparent url(skin/sh.png) top center repeat-y;
	margin-left: auto;
	margin-right: auto;
	width: 980px;
    margin-top: 22px;
    padding: 0px;
}

.skin .top {
    background: transparent url(skin/sh_top.png) top center no-repeat;
    height: 10px;
}

.skin .bottom {
    background: transparent url(skin/sh_bot.png) bottom center no-repeat;
}

.container_12 {
    margin: 0 10px;
    background: transparent url(skin/sh.png) top center repeat-y;
}

/* User-bar ****************************************************************************************/

#user-bar {
    position: absolute;
    top: .5em;
    background: transparent;
    height: 32px;
}

.user_nav {
    text-align: right;
    list-style-type: none;
}

.user_nav li {
    background: none;
    display: inline;
    list-style: none;
    padding: 0 0 0 2em;
    margin: 0;
}

.user_nav li a {
    text-decoration: none;
}

/* Header ****************************************************************************************/

.header {
    text-align: center;
    display: block;
    margin: 0;
    padding: 0;
}



.header .branding {
    font: 0/0 sans-serif;
    margin: 0;
    padding: 0;
}

.header .branding{
    padding: 0;
    margin: 0;
}

.nav_bar {
    margin: 0;
    padding: 4.8em 0 0;
    text-align: left;
    position: relative;
}

.nav_main {
    font-size: 1.2em;
    font-weight: bold;
    list-style: none;
    margin: 0;
    padding: 0;
    position: absolute;
    bottom: 0px;
}

.nav_main li {
    background: none;
    float: left;
    margin: 0;
    padding: 0;
    display: inline;
}

.nav_main a {
    display: block;
    padding: 0.15em 1em 0.25em 1em;
    text-decoration: none;
}

.nav_main a:hover {
    color: #000;
    text-decoration: none;
}

/* Footer ****************************************************************************************/

#footer {
    text-align: center;
    margin: 2em 0 0 0;
    padding: 0;
    height: 20px;
}



.nav_bottom {
    height: 1em;
}

/* Title bar */

.title_bar {
    margin: 0;
    padding: 0;
    text-align: left;
    height: 32px;
}

.title_bar em {
    font-weight: normal;
    font-style: italic;
}

.title_bar a {
    color: #000;
    text-decoration: none;
}

.title_bar a:hover {
    text-decoration: none;
}

/* breadcrumbs bar ****************************************************************************/

.breadcrumb {
    height: 32px;
    line-height: 32px;
}

.breadcrumb em {
    display: none;
}

.breadcrumb span {
    whitespace: nowrap;
}

.breadcrumb .imgreplacement {
    background-image: url(../css/skin/arrows.png);
    height: 7px;
    margin: 0px 3px;
    width: 7px;
}

/* box styles *************************************************************************************/
.box {
    margin: 0 0 1em 0;
}

.box h2.head,
.box h3.head,
.box h4.head,
.box h5.head,
.box h6.head {

    margin: 0;
    padding: 0.2em 12px 0.3em;
}

.box p {
    margin: 0;
    padding: 1em;
}

.box ul {
    margin: 0 0 1em 1em;
}

.box {
    border: 1px solid #deeff6;
}

.box.open {
    background: transparent;
}

.box.closed {
    background: #deeff6;
}

.box h4 {
    background: #cce0f1;
}



/* Search Forms **********************************************************************************/

#search #search_simple {
    padding: 0 0 0 0;
}

#search .search_home {
    margin: 0 0 4em 0;
}

#search .search_home input.txt-input,
#search .search_result input.txt-input {
    width: 300px;
    margin: 0 1em;
}

#search .search_advanced {

}

#search .search_advanced h1 {
    margin: .5em 0;
}

#search .search_advanced table td {
    text-align: right;
}

#search .search_advanced table td:nth-child(3) {
    text-align: left;
}

/*#search .search_advanced table td:nth-child(3) input[type=text] {*/
/*width: 300px*/
/*}*/

#search #province-list table td, #search #collectiebalans-list table td {
    text-align: left;
}

#search input.in-small {
    width: 75px;
}

/* Results page **********************************************************************************/

#query_breadcrumbs {
    margin: 1em 0;
    padding: 0;
    height: 42px;
    line-height: 42px;
    vertical-align: baseline;
}

#query_breadcrumbs dl dt,
#query_breadcrumbs dl dd {
    display: inline;
}

#query_breadcrumbs dl dd {
    background: url(skin/arrows.png) 0 4px no-repeat;
    margin: 0;
    padding-left: 1.25em;
}

#query_breadcrumbs dl dd.nobg {
    background: none;
}

#query_breadcrumbs h3 {
    float: left;
    padding: 0;
    margin: 0;
    font-weight: normal;
}

ul.nav_query_breadcrumbs {
    padding: 0;
    margin: 0;
    height: 42px;   
}

ul.nav_query_breadcrumbs li {
    display: inline;
    /*font-size: 100%;*/
}

ul.nav_query_breadcrumbs li.nobg {
    background: none;
}

#result-count {
    float: left;
    margin-right: 1em;
}

#view-select {
/*margin: 1em 0;*/
    float: right;
}

#view-select a {
    text-decoration: none;
}

#results table {
    margin: 1em 0;
}

#results table caption {
    display: none;
    clear: both;
}

#results table td {
    padding: 0;
}

.brief-thumb-container, .brief-thumb-container-listview {
    overflow: hidden;
    text-align: center;
    padding: 0.5em;
}

.brief-thumb-container img, .brief-thumb-container-listview img {
    border: 4px solid #fff;
    -moz-box-shadow: 3px 3px 4px #bbb;
    -webkit-box-shadow: 3px 3px 4px #bbb;
    box-shadow: 3px 3px 4px #bbb;
}

.brief-content-container {
/*border: 1px solid #e5e5e5;*/
    padding: .5em;
    min-height: 75px;
}

.related-thumb-container {
    padding: 0;
}

#no-result {
    font-size: large;
    color: #990033;
    margin: 1em .5em 2em .5em;
}

/* Facets - Refine Search */

.nav_facets li, .nav_types li {
    background: none;
    display: inline;
    margin: 0;
    padding: 0 1em 0 0;
}

/* Items page **********************************************************************************/
.pagination {
    margin: 1em 0;
}

#item-detail {
    clear: both;
    overflow: hidden;
    margin: 1em 0 0 0;
}

#item-detail h1 {
    font-size: 1.5em;
    line-height: 1.5em;
    padding: .5em;
}

table.item {
    margin: 0;
    padding: 0;
}

table.item th {
    background: #fff;
    text-align: right;
    font-weight: bold;
}

table.item td {
    background: #fff;
}

table.item caption {
    display: none;
}

#left-col h3 {
    margin: 0 0 1em 0;
    padding: 0;
}

#left-col h6 {
    margin: 2em 0 0 0;
}

/* USER section styles ***************************************************************************/

#user-info {
    margin-top: 1em;
}

/* UI Button styles ******************************************************************************/

.fg-button {
    outline: 0;
    margin: 0 4px 0 0;
    padding: .3em 0.5em;
    text-decoration: none !important;
    cursor: pointer;
    position: relative;
    text-align: center;
    zoom: 1;
    color: #154273;
}

.fg-button .ui-icon {
    position: absolute;
    top: 50%;
    margin-top: -8px;
    left: 50%;
    margin-left: -8px;
}

a.fg-button {
    float: left;
}

/* remove extra button width in IE */
button.fg-button, input.fg-button {
    width: auto;
    overflow: visible;
}

.fg-button-icon-left {
    padding-left: 2.1em;
}

.fg-button-icon-right {
    padding-right: 2.1em;
}

.fg-button-icon-left .ui-icon {
    right: auto;
    left: .2em;
    margin-left: 0;
}

.fg-button-icon-right .ui-icon {
    left: auto;
    right: .2em;
    margin-left: 0;
}

.fg-button-icon-solo {
    display: block;
    width: 8px;
    text-indent: -9999px;
}

/* solo icon buttons must have block properties for the text-indent to work */

.fg-buttonset {
    float: left;
}

.fg-buttonset .fg-button {
    float: left;
}

.fg-buttonset-single .fg-button,
.fg-buttonset-multi .fg-button {
    margin-right: -1px;
}

.fg-toolbar {
    padding: .15em .25em;
    margin: 0;
}

.fg-toolbar .fg-buttonset {
    margin-right: 1.5em;
    padding-left: 1px;
}

.fg-toolbar .fg-button {
    font-size: 1em;
}


/* Exceptions ********************************************************************/

.exceptions {
    margin: 2em 0;
}

/**
* ----------------------------------------------------------------------------
* toggleElements.css - Stylesheet for jQuery-Plugin toggleElements
* ----------------------------------------------------------------------------
*/

/* Toggler - default style */
.toggler {
    margin: 1.5em 0;
    border-bottom: solid 1px #ccc;
    cursor: pointer;
    font-size: 1.0em;
    font-weight: bold;
    line-height: 30px;
    display: block;
    text-decoration: none;
}

.toggler-closed {
    color: #333;
    padding-left: 8px;
    /*height: 30px;*/
    background: #fff url(../images/togglerc.gif) center right no-repeat;

}

.toggler-closed:hover {
    color: #0162CD;
    padding-left: 8px;
    height: 30px;
    background: #fff url(../images/togglerch.gif) center right no-repeat;
}

.toggler-opened {
    color: #333;
    padding-left: 8px;
    height: 30px;
    background: #fff url(../images/togglero.gif) center right no-repeat;
}

.toggler-opened:hover {
    color: #0162CD;
    padding-left: 8px;
    height: 30px;
    background: #fff url(../images/toggleroh.gif) center right no-repeat;

}

/* Facet title toggles  ********************************************************************/

.toggler-c-closed {
    background: transparent;
    margin: -10px 0px 10px 0px;
    padding: 4px;
}

.toggler-c-opened {
    margin: -10px 0px 10px 0px;
    padding: 4px;
    background: #fff;
}

/* Facet list ********************************************************************/

#facet-list.scroll {
    overflow-x: hidden;
    overflow-y: auto;
    max-height: 200px;
    margin-bottom: 10px;

}

#facet-list .add {
    background: transparent url(../images/toggle_plus.gif) no-repeat top left;
    padding: 0 0 0 16px;
    height: 32px;
}

#facet-list .remove {
    background: transparent url(../images/toggle_minus.gif) no-repeat top left;
    color: #555;
    padding: 0 0 0 16px;
    font-weight: bold;
    text-decoration: none;
}

/* General rules ********************************************************************/

a.disabled {
    color: #999999;
}

/* Static pages */
#content.content-preview {
    margin: 0 0 2em 0;
    padding: 2em 0;
    border-bottom: 4px solid #999999;
    overflow: hidden;
}

#admin-block {
    position: absolute;
    top: 5px;
    left: 5px;
    z-index: 10000;
    background: #fff;
    -moz-box-shadow: 3px 3px 4px #bbb;
    -webkit-box-shadow: 3px 3px 4px #bbb;
    box-shadow: 3px 3px 4px #bbb;
    border-bottom: 4px solid #999999;
    width: 200px;
}

#admin-block h4 {
    background: #555;
    color: #fff;
    padding: .5em;
}

#admin-block p {
    padding: .5em;
}

#admin-block .ui-icon{
    float:left;
    margin:0 .25em 0 0;
}

